# spiderbuf

./: .gitignore  main.py  pyproject.toml
spiders/: S01-requests库及lxml库入门.py  S01.html  S01.xlsx  S02-http请求分析及头构造使用.py  S03-lxml库进阶语法及解析练习.py  S03.xlsx  tencentvideo.py  test.py
